force-app/main/default/objects/Opportunity/fields/Global_Chatter__c.field-meta.xml
<CustomField>
    <fullName>Global_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>06830598: Restrict the&quot;Opportunity Stage 1-4&quot; Process Builder to Post &quot;Global Chatter Post&quot; flow on Creation of record.</description>
    <label>Global Chatter</label>
    <type>Checkbox</type>
</CustomField>