force-app/main/default/objects/Opportunity/fields/Group_Purchasing_Organization_GPO__c.field-meta.xml
<CustomField>
    <fullName>Group_Purchasing_Organization_GPO__c</fullName>
    <inlineHelpText>If your customer is contracting under one of the GPO’s we have contracts with please select.</inlineHelpText>
    <label>Healthcare Partner / GPO</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AAPA</fullName>
            </value>
            <value>
                <fullName>Capstone</fullName>
            </value>
            <value>
                <fullName>Conductiv</fullName>
            </value>
            <value>
                <fullName>Daniels Health</fullName>
            </value>
            <value>
                <fullName>Diagen</fullName>
            </value>
            <value>
                <fullName>EyeProGo</fullName>
            </value>
            <value>
                <fullName>GreenHealth Exchange</fullName>
            </value>
            <value>
                <fullName>HealthTrust</fullName>
            </value>
            <value>
                <fullName>Mayo Clinic</fullName>
            </value>
            <value>
                <fullName>nFerence</fullName>
            </value>
            <value>
                <fullName>Not Contracted</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PathPresenter</fullName>
            </value>
            <value>
                <fullName>Pramana</fullName>
            </value>
            <value>
                <fullName>Provider Supply Chain Partners</fullName>
            </value>
            <value>
                <fullName>Quorum</fullName>
            </value>
            <value>
                <fullName>Synergy Health</fullName>
            </value>
            <value>
                <fullName>Ascension/The Resource Group</fullName>
                <label>The Resource Group</label>
            </value>
            <value>
                <fullName>University of Texas Supply Chain Alliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>