force-app/main/default/objects/Opportunity/fields/GSA_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>GSA_Eligibility__c</fullName>
    <label>GSA/SLED/Public Sector Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Undetermined</fullName>
                <default>true</default>
                <label>Undetermined</label>
            </value>
            <value>
                <fullName>GSA Eligible</fullName>
            </value>
            <value>
                <fullName>Standard Pricing Applies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>