force-app/main/default/objects/Opportunity/fields/Hand_Delivery_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Hand_Delivery_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hand Delivery Indicator</label>
    <type>Checkbox</type>
</CustomField>