force-app/main/default/objects/Opportunity/fields/Has_ABM_Attribution__c.field-meta.xml
<CustomField>
    <fullName>Has_ABM_Attribution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Account Attribution</label>
    <type>Checkbox</type>
</CustomField>