force-app/main/default/objects/Opportunity/fields/Has_Marketing_Attribution__c.field-meta.xml
<CustomField>
    <fullName>Has_Marketing_Attribution__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If an Opportunity has one or more related Campaign Attribution Detail records where FCCI__FirstTouchModel1__c = TRUE, then this is set to true</description>
    <label>Has Opportunity Attribution</label>
    <type>Checkbox</type>
</CustomField>