force-app/main/default/objects/Opportunity/fields/IM_Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>IM_Booked_Date__c</fullName>
    <label>First Bill Date</label>
    <type>Date</type>
</CustomField>