force-app/main/default/objects/Opportunity/fields/IM_Commit_to_Forecast__c.field-meta.xml
<CustomField>
    <fullName>IM_Commit_to_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forecast</label>
    <type>Checkbox</type>
</CustomField>