force-app/main/default/objects/Opportunity/fields/IM_Competitor__c.field-meta.xml
<CustomField>
    <fullName>IM_Competitor__c</fullName>
    <label>Competitor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>