force-app/main/default/objects/Opportunity/fields/IM_External_Id__c.field-meta.xml
<CustomField>
    <fullName>IM_External_Id__c</fullName>
    <displayFormat>{0000000000}</displayFormat>
    <label>Legacy Id</label>
    <type>AutoNumber</type>
</CustomField>