force-app/main/default/objects/Opportunity/fields/IM_Has_Competitors__c.field-meta.xml
<CustomField>
    <fullName>IM_Has_Competitors__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks for the number of competitors. Value is updated from a trigger 	(OpportunityCompetitorsCountTrg) and marks value as true if any competitors are related before update of the record.</description>
    <label>Competitors Check</label>
    <type>Checkbox</type>
</CustomField>