force-app/main/default/objects/Opportunity/fields/IM_Lost_Comments__c.field-meta.xml
<CustomField>
    <fullName>IM_Lost_Comments__c</fullName>
    <label>Lost Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>