force-app/main/default/objects/Opportunity/fields/IM_Parent_Opportunity_Target_Amount__c.field-meta.xml
<CustomField>
    <fullName>IM_Parent_Opportunity_Target_Amount__c</fullName>
    <formula>IM_Parent_Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Opportunity Target Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>