force-app/main/default/objects/Opportunity/fields/IM_Pilot_Stage__c.field-meta.xml
<CustomField>
    <fullName>IM_Pilot_Stage__c</fullName>
    <label>Pilot Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Execution</fullName>
            </value>
            <value>
                <fullName>Completed - Won</fullName>
            </value>
            <value>
                <fullName>Completed - Lost</fullName>
            </value>
            <value>
                <fullName>Extended</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>