force-app/main/default/objects/Opportunity/fields/IM_Pilot_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>IM_Pilot_Start_Date__c</fullName>
    <label>Pilot Start Date</label>
    <type>Date</type>
</CustomField>