force-app/main/default/objects/Opportunity/fields/IM_Reason_Lost__c.field-meta.xml
<CustomField>
    <fullName>IM_Reason_Lost__c</fullName>
    <label>Reason Lost</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Autopay Refused</fullName>
            </value>
            <value>
                <fullName>Benchmarking</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Competitors Solution</fullName>
            </value>
            <value>
                <fullName>Conflict</fullName>
            </value>
            <value>
                <fullName>Contractual Terms</fullName>
            </value>
            <value>
                <fullName>Decision Location</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Funding</fullName>
            </value>
            <value>
                <fullName>In House</fullName>
            </value>
            <value>
                <fullName>Installed Base</fullName>
            </value>
            <value>
                <fullName>No Clear Business Need</fullName>
            </value>
            <value>
                <fullName>Non Conversion</fullName>
            </value>
            <value>
                <fullName>No Suitable Solution</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>Relationship Weakness</fullName>
            </value>
            <value>
                <fullName>Service Perception</fullName>
            </value>
            <value>
                <fullName>Solution Fit</fullName>
            </value>
            <value>
                <fullName>Technical Fit</fullName>
            </value>
            <value>
                <fullName>Track Record</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>Booking Policy Violation</fullName>
            </value>
            <value>
                <fullName>Sales Ops Hygiene</fullName>
            </value>
            <value>
                <fullName>Cancelled after Signing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>