force-app/main/default/objects/Opportunity/fields/IM_Servicing_Region__c.field-meta.xml
<CustomField>
    <fullName>IM_Servicing_Region__c</fullName>
    <description>The IM servicing region related to the opportunity</description>
    <label>Servicing District/Market</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aberdeen</fullName>
            </value>
            <value>
                <fullName>Agra</fullName>
            </value>
            <value>
                <fullName>Ahemdabad</fullName>
            </value>
            <value>
                <fullName>Aix</fullName>
            </value>
            <value>
                <fullName>Albuquerque</fullName>
            </value>
            <value>
                <fullName>Alphen</fullName>
            </value>
            <value>
                <fullName>Asheville</fullName>
            </value>
            <value>
                <fullName>Aston</fullName>
            </value>
            <value>
                <fullName>Athens</fullName>
            </value>
            <value>
                <fullName>Atlanta</fullName>
            </value>
            <value>
                <fullName>Austin</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Bahrain</fullName>
            </value>
            <value>
                <fullName>Baltimore / Washington</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Barcelona</fullName>
            </value>
            <value>
                <fullName>Barranquilla</fullName>
            </value>
            <value>
                <fullName>Basildon</fullName>
            </value>
            <value>
                <fullName>Baton Rouge</fullName>
            </value>
            <value>
                <fullName>Belfast</fullName>
            </value>
            <value>
                <fullName>Belfast - Northern Ireland</fullName>
            </value>
            <value>
                <fullName>Berlin</fullName>
            </value>
            <value>
                <fullName>Bhondsi</fullName>
            </value>
            <value>
                <fullName>Bhopal</fullName>
            </value>
            <value>
                <fullName>Bhubhneswar</fullName>
            </value>
            <value>
                <fullName>Bilbao</fullName>
            </value>
            <value>
                <fullName>Birmingham</fullName>
            </value>
            <value>
                <fullName>Birmingham (UK)</fullName>
            </value>
            <value>
                <fullName>Bochum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>