force-app/main/default/objects/Opportunity/fields/IM_Stage_6_Entered_Date__c.field-meta.xml
<CustomField>
    <fullName>IM_Stage_6_Entered_Date__c</fullName>
    <label>Stage 6 Entered Date</label>
    <type>Date</type>
</CustomField>