force-app/main/default/objects/Opportunity/fields/IM_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>IM_Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accelerated Information Consolidation</fullName>
            </value>
            <value>
                <fullName>Backup Care</fullName>
            </value>
            <value>
                <fullName>Cubic Ft</fullName>
            </value>
            <value>
                <fullName>Customer Billable Audits</fullName>
            </value>
            <value>
                <fullName>Data Restoration</fullName>
            </value>
            <value>
                <fullName>DC - Cross Connect</fullName>
            </value>
            <value>
                <fullName>DC - Data Domain Services</fullName>
            </value>
            <value>
                <fullName>DC - Helping Hands</fullName>
            </value>
            <value>
                <fullName>DC - Installation / Implementation</fullName>
            </value>
            <value>
                <fullName>DC - Managed Internet</fullName>
            </value>
            <value>
                <fullName>DC - Network Circuit</fullName>
            </value>
            <value>
                <fullName>DC - Other MRC Service</fullName>
            </value>
            <value>
                <fullName>DC - Rent</fullName>
            </value>
            <value>
                <fullName>DC - Retail Circuit</fullName>
            </value>
            <value>
                <fullName>DC - Special Projects</fullName>
            </value>
            <value>
                <fullName>Destruction</fullName>
            </value>
            <value>
                <fullName>Disaster Recovery</fullName>
            </value>
            <value>
                <fullName>Each</fullName>
            </value>
            <value>
                <fullName>EV Up-Sell  - Gigs</fullName>
            </value>
            <value>
                <fullName>EV Up Sell - Seats</fullName>
            </value>
            <value>
                <fullName>IMAGES</fullName>
            </value>
            <value>
                <fullName>Inventory Data Capture – Carton Level</fullName>
            </value>
            <value>
                <fullName>Inventory Data Capture – File Level</fullName>
            </value>
            <value>
                <fullName>Inventory Pack/Purge/Shift</fullName>
            </value>
            <value>
                <fullName>Inventory Relocation</fullName>
            </value>
            <value>
                <fullName>Labour Hours</fullName>
            </value>
            <value>
                <fullName>Library Move</fullName>
            </value>
            <value>
                <fullName>Linear Ft</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Shred - Add Bins</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>