force-app/main/default/objects/Opportunity/fields/IM_Up_Sell_Detail__c.field-meta.xml
<CustomField>
    <fullName>IM_Up_Sell_Detail__c</fullName>
    <inlineHelpText>Enter a detailed description of the Department, Division, or Location that the deal was sold to.  There is no need to put a Contact Name, Company Name, or Revenue Type as this has already been provided in the other fields on the Opportunity.</inlineHelpText>
    <label>Up-Sell Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>