force-app/main/default/objects/Opportunity/fields/IM_Up_Sell_Quantity__c.field-meta.xml
<CustomField>
    <fullName>IM_Up_Sell_Quantity__c</fullName>
    <inlineHelpText>Please enter a Quantity.  
Examples:  for cubic ft and linear ft, enter the total amount involved in the up-sell.  For up-sells on rotations (Wkly-Daily, Mthly-Wkly, etc), enter 1.</inlineHelpText>
    <label>Up-Sell Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>