force-app/main/default/objects/Opportunity/fields/IM_Up_Sell_Sold_To__c.field-meta.xml
<CustomField>
    <fullName>IM_Up_Sell_Sold_To__c</fullName>
    <inlineHelpText>Enter the existing Customer Account you are selling to</inlineHelpText>
    <label>Up-Sell Oracle Account ID#</label>
    <length>80</length>
    <type>Text</type>
</CustomField>