force-app/main/default/objects/Opportunity/fields/IM_X1_Qualification_Reached__c.field-meta.xml
<CustomField>
    <fullName>IM_X1_Qualification_Reached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1 - Qualification Reached</label>
    <type>Checkbox</type>
</CustomField>