force-app/main/default/objects/Opportunity/fields/IM_X2_Solution_Development_Reached__c.field-meta.xml
<CustomField>
    <fullName>IM_X2_Solution_Development_Reached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2 - Solution Developed Reached</label>
    <type>Checkbox</type>
</CustomField>