force-app/main/default/objects/Opportunity/fields/IM_X3_Propose_Reached__c.field-meta.xml
<CustomField>
    <fullName>IM_X3_Propose_Reached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3 - Solution Agreed Reached</label>
    <type>Checkbox</type>
</CustomField>