force-app/main/default/objects/Opportunity/fields/IM_X6_Setup_Reached__c.field-meta.xml
<CustomField>
    <fullName>IM_X6_Setup_Reached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>6 - Setup Reached</label>
    <type>Checkbox</type>
</CustomField>