force-app/main/default/objects/Opportunity/fields/IM_X7_Closed_Reached__c.field-meta.xml
<CustomField>
    <fullName>IM_X7_Closed_Reached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>7 - Closed Reached</label>
    <type>Checkbox</type>
</CustomField>