force-app/main/default/objects/Opportunity/fields/IMDC_Owner__c.field-meta.xml
<CustomField>
    <fullName>IMDC_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IMDC Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>