force-app/main/default/objects/Opportunity/fields/IME_Contract__c.field-meta.xml
<CustomField>
    <fullName>IME_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract name</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>