force-app/main/default/objects/Opportunity/fields/IME_Nb_NoUnknownCompetitor__c.field-meta.xml
<CustomField>
    <fullName>IME_Nb_NoUnknownCompetitor__c</fullName>
    <label>IME_Nb_NoUnknownCompetitor</label>
    <summaryFilterItems>
        <field>IME_RM_Competitor__c.Competitor__c</field>
        <operation>equals</operation>
        <value>-No/Unknown Competitor-</value>
    </summaryFilterItems>
    <summaryForeignKey>IME_RM_Competitor__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>