force-app/main/default/objects/Opportunity/fields/IME_Number_of_Record_Management_Products__c.field-meta.xml
<CustomField>
    <fullName>IME_Number_of_Record_Management_Products__c</fullName>
    <description>Counts the Number of Opp Products where Product Class = Opportunity Management. This field will be used for the vended/unvended alert forumal field</description>
    <label>Number of Record Management Products</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Class__c</field>
        <operation>equals</operation>
        <value>Records Management</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>