force-app/main/default/objects/Opportunity/fields/IME_Opportunity_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>IME_Opportunity_Review_Date__c</fullName>
    <description>Allows user to set a date for a review.  Used by IMLA users only.  Case 02603897</description>
    <inlineHelpText>If you want to review this lost opportunity in the future, set a date.</inlineHelpText>
    <label>Opportunity Review Date</label>
    <type>Date</type>
</CustomField>