force-app/main/default/objects/Opportunity/fields/IME_Reason_Won__c.field-meta.xml
<CustomField>
    <fullName>IME_Reason_Won__c</fullName>
    <label>Reason Won</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Benchmarking</fullName>
            </value>
            <value>
                <fullName>Decision Location</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>Relationship Strength</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Service Expectation</fullName>
            </value>
            <value>
                <fullName>Solution Fit</fullName>
            </value>
            <value>
                <fullName>Technical Fit</fullName>
            </value>
            <value>
                <fullName>Track Record</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>