force-app/main/default/objects/Opportunity/fields/IMGA_Account__c.field-meta.xml
<CustomField>
    <fullName>IMGA_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IMGA Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (IMGA Account)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>