force-app/main/default/objects/Opportunity/fields/IMGA_Name__c.field-meta.xml
<CustomField>
    <fullName>IMGA_Name__c</fullName>
    <description>Returns the IMGA name of the Account that the Opportunity is attached to.</description>
    <formula>Account.IM_IMGA_Indexed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IMGA Name</label>
    <type>Text</type>
</CustomField>