force-app/main/default/objects/Opportunity/fields/IMGA_Owner__c.field-meta.xml
<CustomField>
    <fullName>IMGA_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IMGA Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunitiesWhereImga</relationshipName>
    <type>Lookup</type>
</CustomField>