force-app/main/default/objects/Opportunity/fields/IMGS_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>IMGS_Approval_Status__c</fullName>
    <label>IMGS Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Approval Necessary</fullName>
                <default>true</default>
                <label>No Approval Necessary</label>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>GSA Pricing Approved</fullName>
            </value>
            <value>
                <fullName>Standard Pricing Applies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>