force-app/main/default/objects/Opportunity/fields/Imp_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Imp_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Imp Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Imp_Assigned</relationshipName>
    <type>Lookup</type>
</CustomField>